--- a/python/CMakeLists.txt
+++ b/python/CMakeLists.txt
@@ -32,7 +32,7 @@ endif()
 GR_PYTHON_INSTALL(
     FILES
     __init__.py
-    Equalize_py.py DESTINATION ${GR_PYTHON_DIR}/OFDM_system
+    DESTINATION ${GR_PYTHON_DIR}/OFDM_system
 )
 
 ########################################################################
